# AI-Prompt-Manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ios-testflight.yml  release-windows.yml
altstore/: config.json  source.json
scripts/: ExportOptions-app-store.plist  build-ios-altstore.sh  build-ios-testflight.sh  generate-altstore-source.mjs
src/: main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/ios/: Package.swift
src-tauri/ios/Sources/: FolderImportPlugin.swift
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collections.rs  danbooru.rs  files.rs  maintenance.rs  metadata.rs  mod.rs  prompt_tags.rs  search.rs  tags.rs  thumbnails.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/db/repositories/: app_settings.rs  collections.rs  files.rs  fts.rs  metadata.rs  mod.rs  photo_scan.rs  tags.rs  thumbnails.rs
src-tauri/src/models/: collection.rs  file.rs  metadata.rs  mod.rs  prompt_tag.rs  tag.rs
src-tauri/src/platform/: android.rs  ios.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/plugins/: folder_import.rs  mod.rs
src-tauri/src/services/: character_matcher.rs  danbooru_index.rs  file_ops.rs  file_scanner.rs  hash.rs  import_service.rs  library_reconcile.rs  metadata_extractor.rs  mod.rs  prompt_character_tags.rs  prompt_tagger.rs  thumbnailer.rs
src/app/: App.tsx  providers.tsx
src/hooks/: useGridPinchZoom.ts  useViewportLayout.ts
src/lib/: confirm.ts  (+15 more)
(+58 files in other folders)
