[package]
name = "ai-file-manager"
version = "0.1.0"
description = "AI metadata file manager"
authors = ["ryotaro"]
edition = "2021"

[lib]
name = "ai_file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
sha2 = "0.10"
png = "0.17"
kamadak-exif = "0.6"
thiserror = "2"
dirs = "6"
regex = "1"
time = "=0.3.36"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
trash = "5"
